--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>λ</title>
-    <link rel="stylesheet" href="src/styless.css">  
+    <link rel="stylesheet" href="src/style.css">  
 </head>
 <body>
-    <div id="quote"></div>
+    <div class="section">
+        <div id="quote"></div>
+    </div>
     <script src="src/app.js"></script>
 </body>
 </html>
